bk_ida/gobmkida/c1/location_to_string
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/location_to_string/src/engine/printutils.c:741:7: error: use of undeclared identifier 'location_to_string_init'; did you mean 'location_to_string'?
if ( !location_to_string_init ) 
      ^~~~~~~~~~~~~~~~~~~~~~~
      location_to_string
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/location_to_string/src/engine/printutils.c:736:14: note: 'location_to_string' declared here
const char * location_to_string( int pos) 
             ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/location_to_string/src/engine/printutils.c:743:6: error: use of undeclared identifier 'location_to_string_buf'; did you mean 'location_to_string'?
v1 = location_to_string_buf; 
     ^~~~~~~~~~~~~~~~~~~~~~
     location_to_string
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/location_to_string/src/engine/printutils.c:736:14: note: 'location_to_string' declared here
const char * location_to_string( int pos) 
             ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/location_to_string/src/engine/printutils.c:749:1: error: use of undeclared identifier 'location_to_string_init'
location_to_string_init = 1; 
^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/location_to_string/src/obj/1/printutils.o] Error 1
